fix: Adjust horizontal spacing for collection header

--- a/packages/block-editor/src/components/block-types-list/style.native.scss
+++ b/packages/block-editor/src/components/block-types-list/style.native.scss
@@ -17,7 +17,7 @@
 .block-types-list__section-header-title {
 	color: $black;
 	font-size: 16px;
-	margin-left: 0.5rem;
+	margin-left: 10px;
 }
 
 .block-types-list__section-header-title--dark {
